--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -161,14 +161,14 @@ nav {
   flex-direction: column;
   align-items: center;
   h2 {
-    color: white;
+    color: #ffffff;
     font-size: 1rem;
     font-weight: normal;
     line-height: 1;
     margin: 0 20px;
   }
   select {
-    background-color: white;
+    background-color: #ffffff;
     border: 1px solid #fff;
     font-family: Arial, sans-serif;
     font-size: 11pt;
@@ -242,7 +242,7 @@ nav {
   }
   li a {
     background-color: #444;
-    color: orange;
+    color: #ffa500;
     border-bottom: 3px solid #eee;
     display: inline-block;
     font-size: 10pt;
