fix: lazy loading images

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -213,7 +213,7 @@ nav {
     border: 2px solid #ccc;
     font-family: Arial, sans-serif;
     min-height: 380px;
-    padding: 0 30px 25px;
+    padding: 25px;
     text-align: left;
     width: 270px;
     margin: 10px;
