--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -77,7 +77,7 @@ summery {
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  padding: 30px 0;
   background-color: #252831;
   text-align: center;
   h1 {
@@ -169,7 +169,8 @@ nav {
   }
   select {
     background-color: #ffffff;
-    border: 1px solid #fff;
+    border-radius: 6px;
+    border: none;
     font-family: Arial, sans-serif;
     font-size: 11pt;
     height: 35px;
@@ -210,7 +211,7 @@ nav {
   text-align: center;
   li {
     background-color: #fff;
-    border: 2px solid #ccc;
+    border-radius: 6px;
     font-family: Arial, sans-serif;
     min-height: 380px;
     padding: 25px;
@@ -222,6 +223,7 @@ nav {
   }
   .restaurant-img {
     background-color: #ccc;
+    border-radius: 6px;
     display: block;
     margin: 0;
     width: 100%;
@@ -339,6 +341,34 @@ nav {
         color: #fafa17;
       }
     }
+    &.offline-review {
+      color: #b1b0b0;
+      p {
+        color: #b1b0b0;
+      }
+      .offline-text {
+        color: #3397db;
+      }
+    }
+  }
+}
+
+#review-form-container {
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  #reviews-form {
+    h3 {
+      text-align: center;
+    }
+    input,
+    textarea {
+      border: none;
+      border-radius: 6px;
+      padding: 10px;
+    }
   }
 }
 
@@ -357,5 +387,21 @@ nav {
 @media (min-width: 700px) {
   #maincontent-top {
     flex-direction: row-reverse;
+  }
+}
+
+#review-form {
+}
+
+/* ====================== Favorite Button ====================== */
+.favorite-button {
+  background-color: transparent;
+  border: none;
+  color: grey;
+  font-size: 40px;
+  padding: 0 35px;
+  cursor: pointer;
+  &.favorited {
+    color: #ff0000 !important;
   }
 }
