chore: modify gulp file

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -390,8 +390,8 @@ nav {
   }
 }
 
-#review-form {
-}
+// #review-form {
+// }
 
 /* ====================== Favorite Button ====================== */
 .favorite-button {
