--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,5 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
+$stars: 5;
+$star-size: 40px;
+$star-spacing: 2px;
+$star-on-color: #ffd700;
+$star-off-color: #cccccc;
 
 body,
 td,
@@ -66,7 +71,7 @@ summery {
 }
 
 #footer {
-  background-color: #444;
+  background-color: #292c34;
   color: #f3f3f3;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -141,7 +146,7 @@ nav {
 }
 
 .inside #map-container {
-  background: #0000ff none repeat scroll 0 0;
+  background: #292c34 none repeat scroll 0 0;
   width: 100%;
 }
 
@@ -156,7 +161,7 @@ nav {
 .filter-options {
   display: flex;
   width: 100%;
-  background-color: #185d8c;
+  background-color: #292c34;
   flex-grow: 1;
   flex-direction: column;
   align-items: center;
@@ -243,9 +248,10 @@ nav {
     font-size: 11pt;
   }
   li a {
-    background-color: #444;
-    color: #ffa500;
-    border-bottom: 3px solid #eee;
+    background-color: #292c34;
+    color: #ffffff;
+    border-bottom: none;
+    border-radius: 6px;
     display: inline-block;
     font-size: 10pt;
     margin: 15px 0 0;
@@ -280,14 +286,17 @@ nav {
 }
 #restaurant-img {
   width: 90%;
+  border-radius: 6px 6px 0 0;
 }
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
+  float: left;
 }
 #restaurant-cuisine {
-  background-color: #333;
-  color: #ddd;
+  background-color: #292c34;
+  border-radius: 0 0 6px 6px;
+  color: #ffffff;
   font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
@@ -325,49 +334,28 @@ nav {
   align-items: center;
   li {
     background-color: #fff;
-    border: 2px solid #f5f5f5;
+    border: none;
     display: block;
     list-style-type: none;
     overflow: hidden;
     padding: 20px;
+    margin-bottom: 1px;
     position: relative;
     width: 90%;
+    transition: 0.5s ease all;
     p {
       margin: 10px;
       text-align: justify;
     }
     h3 {
       .star-icon {
-        color: #fafa17;
+        color: #daa520;
       }
     }
-    &.offline-review {
-      color: #b1b0b0;
-      p {
-        color: #b1b0b0;
+    &.new-review {
+      .new-review-text {
+        color: gold;
       }
-      .offline-text {
-        color: #3397db;
-      }
-    }
-  }
-}
-
-#review-form-container {
-  margin: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  #reviews-form {
-    h3 {
-      text-align: center;
-    }
-    input,
-    textarea {
-      border: none;
-      border-radius: 6px;
-      padding: 10px;
     }
   }
 }
@@ -390,8 +378,80 @@ nav {
   }
 }
 
-// #review-form {
-// }
+/* ====================== Restaurant Form ====================== */
+
+#review-form-container {
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+  padding: 20px 0;
+  #review-form {
+    width: 100%;
+    padding: 0;
+    text-align: center;
+    button {
+      align-self: center;
+      border-radius: 6px;
+      margin: auto;
+      border: none;
+      padding: 20px 35px;
+      text-transform: uppercase;
+      color: #ffffff;
+      background-color: #292c34;
+    }
+    .form-input-group {
+      margin: 10px 0;
+      label {
+        display: none;
+      }
+      input,
+      textarea {
+        max-width: 100%;
+        width: 100%;
+        border: none;
+        box-sizing: border-box;
+        padding: 20px;
+        margin: auto;
+        border-radius: 6px;
+        position: relative;
+      }
+    }
+  }
+}
+
+.rating {
+  width: ($star-size * $stars) + ($star-spacing * ($stars - 1));
+  height: $star-size;
+  margin: 0 auto;
+  label {
+    float: right;
+    position: relative;
+    width: $star-size;
+    height: $star-size;
+    cursor: pointer;
+
+    &:not(:first-of-type) {
+      padding-right: $star-spacing;
+    }
+
+    &:before {
+      content: '\2605';
+      font-size: $star-size + 2px;
+      color: $star-off-color;
+      line-height: 1;
+    }
+  }
+
+  input[type='radio'] {
+    display: none !important;
+  }
+
+  input:checked ~ label:before,
+  &:not(:checked) > label:hover:before,
+  &:not(:checked) > label:hover ~ label:before {
+    color: $star-on-color;
+  }
+}
 
 /* ====================== Favorite Button ====================== */
 .favorite-button {
@@ -400,7 +460,10 @@ nav {
   color: grey;
   font-size: 40px;
   padding: 0 35px;
+  margin: 0;
   cursor: pointer;
+  float: right;
+  transition: 0.5s ease all;
   &.favorited {
     color: #ff0000 !important;
   }
